--- a/index.html
+++ b/index.html
@@ -23,6 +23,79 @@
             generate the one point twenty-one gigawatts of electricity that I need. I need fuel. Go ahead, quick, get in the car.
         </p>
 
+        <main>
+            <div id="grid">
+
+                <!-- First Row of The Grid -->
+                <div class="grid-number">
+                    1
+                </div>
+                <div class="grid-paragraph">
+                    <h3>MARTY YOU GOTTA</h3>
+                    <p>
+                        Hey man, the dance is over. Unless you know someone else who could play the guitar. Look me up when you get there, guess
+                        I'll be about 47. Alright, we're the pinheads. I hope you don't mind but George asked if he could take me home. I swiped
+                        it from the old lady's liquor cabinet.
+                    </p>
+                </div>
+                
+                <div id="step-1-photo" class="step-photo"></div>
+
+                <!-- First Row of The Grid -->
+
+                <!-- Second Row of The Grid -->
+
+                <div id="step-2-photo" class="step-photo"></div>
+
+                <div class="grid-number">
+                    2
+                </div>
+
+                <div class="grid-paragraph">
+                    <h3>IT WILL JUST HAPPEN</h3>
+                    <p>
+                        Nah, I just don't think I'm cut out for music. There's that word again, heavy. Why are things so heavy in the future. Is
+                        there a problem with the Earth's gravitational pull? Well, because George, nice girls get angry when guys take advantage
+                        of them. I'm sure that in 1985, plutonium is available at every corner drug store, but in 1955, it's a little hard to
+                        come by. Marty, I'm sorry, but I'm afraid you're stuck here. I've gotta go.
+                    </p>
+                </div>
+
+                <!-- Second Row of The Grid -->
+
+                <!-- Third Row of The Grid -->
+
+                <div class="grid-number">
+                    3
+                </div>
+
+                <div class="grid-paragraph">
+                    <h3>CALCULATIONS ARE CORRECT</h3>
+                    <p>
+                        Huh? Doc. Doc. Doc, Doc. Oh, no. You're alive. Bullet proof vest, how did you know, I never got a chance to tell you.
+                        About all that talk about screwing up future events, the space time continuum. That's a Florence Nightingale effect. It
+                        happens in hospitals when nurses fall in love with their patients. Go to it, kid.
+                    </p>
+                </div>
+
+                <div id="step-3-photo" class="step-photo"></div>
+                <!-- Third Row of The Grid -->
+
+                <!-- Fourth Row of The Grid -->
+                <div class="grid-paragraph">
+                    <h3>RIGHT ABOUT HERE</h3>
+                    <p>
+                        Alright, okay listen, keep your pants on, she's over in the cafe. God, how do you do this? What made you change your
+                        mind, George?
+                    </p>
+                </div>
+                <div class="grid-number">
+                    4
+                </div>
+                <!-- Fourth Row of The Grid -->
+            </div>
+        </main>
+
     </div>
 </body>
 </html>
