Added Footer (HTML)

--- a/index.html
+++ b/index.html
@@ -96,6 +96,28 @@
             </div>
         </main>
 
+        <footer>
+            <article>
+                <h2>LOOK <br> AT THE <br> TIME</h2>
+                <p>
+                    What's that thing he's on? Without any sugar. Lorraine, have you ever, uh, been in a situation where you know you had to
+                    act a certain way but when you got there, you didn't know if you could go through with it? Right. This is it. This is
+                    the answer. It says here that a bolt of lightning is gonna strike the clock tower precisely at 10:04 p.m. next Saturday
+                    night. If we could somehow harness this bolt of lightning, channel it into the flux capacitor, it just might work. Next
+                    Saturday night, we're sending you back to the future.
+                </p>
+                <div id="zemeckis">
+                    <h4><span>#ZEM</span>ECKIS</h4>
+                </div>
+            </article>
+
+            
+
+            <div id="footer-img">
+
+            </div>
+        </footer>
+
     </div>
 </body>
 </html>
