Added Link To Mobile.css

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./assets/index.css">
+    <link rel="stylesheet" media="screen and (max-width: 600px)" href="./assets/mobile.css">
 </head>
 <body>
     <!-- Whole website is wrapped in a div so that it can be centered on widths bigger than 1400px -->
@@ -27,10 +28,10 @@
             <div id="grid">
 
                 <!-- First Row of The Grid -->
-                <div class="grid-number">
+                <div class="grid-number" id="grid-number-1">
                     1
                 </div>
-                <div class="grid-paragraph">
+                <div class="grid-paragraph" >
                     <h3>MARTY YOU GOTTA</h3>
                     <p>
                         Hey man, the dance is over. Unless you know someone else who could play the guitar. Look me up when you get there, guess
@@ -47,11 +48,11 @@
 
                 <div id="step-2-photo" class="step-photo"></div>
 
-                <div class="grid-number">
+                <div class="grid-number" id="grid-number-2">
                     2
                 </div>
 
-                <div class="grid-paragraph">
+                <div class="grid-paragraph" id="grid-paragraph-2">
                     <h3>IT WILL JUST HAPPEN</h3>
                     <p>
                         Nah, I just don't think I'm cut out for music. There's that word again, heavy. Why are things so heavy in the future. Is
@@ -65,11 +66,11 @@
 
                 <!-- Third Row of The Grid -->
 
-                <div class="grid-number">
+                <div class="grid-number" id="grid-number-3">
                     3
                 </div>
 
-                <div class="grid-paragraph">
+                <div class="grid-paragraph" id="grid-paragraph-3">
                     <h3>CALCULATIONS ARE CORRECT</h3>
                     <p>
                         Huh? Doc. Doc. Doc, Doc. Oh, no. You're alive. Bullet proof vest, how did you know, I never got a chance to tell you.
@@ -82,14 +83,14 @@
                 <!-- Third Row of The Grid -->
 
                 <!-- Fourth Row of The Grid -->
-                <div class="grid-paragraph">
+                <div class="grid-paragraph" id="grid-paragraph-4">
                     <h3>RIGHT ABOUT HERE</h3>
                     <p>
                         Alright, okay listen, keep your pants on, she's over in the cafe. God, how do you do this? What made you change your
                         mind, George?
                     </p>
                 </div>
-                <div class="grid-number">
+                <div class="grid-number" id="grid-number-4">
                     4
                 </div>
                 <!-- Fourth Row of The Grid -->
